# plotting-service

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/.github/workflows/: build-push.yml  codeql.yml  linting.yml
.github/workflows/: build-push.yml  codeql.yml  dependency-review.yml  formatting-and-linting.yml  linting.yml  scorecard.yml  test.yml
backend/: .dockerignore
data-viewer/: Dockerfile  next.config.mjs  package.json  tsconfig.json
data-viewer/cypress/e2e/basic-loading/: loading.cy.js
data-viewer/cypress/support/: component.ts
data-viewer/src/app/: globals.css  layout.tsx  not-found.tsx
data-viewer/src/app/[...slug]/: page.tsx
data-viewer/src/app/healthz/: route.ts
data-viewer/src/app/view/[...slug]/: page.tsx
data-viewer/src/app/view/[instrument]/[experimentNumber]/[filename]/: page.tsx
data-viewer/src/app/view/generic/experiment_number/[experimentNumber]/[filename]/: page.tsx
data-viewer/src/app/view/generic/user_number/[userNumber]/[filename]/: page.tsx
data-viewer/src/components/: Nav.tsx  NexusViewer.tsx  TextViewer.tsx  TokenRefresh.tsx
data-viewer/src/components/utils/: FallbackPage.tsx  FileQueryUrl.tsx
frontend/: README.md  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: Nav.tsx  NexusViewer.tsx
plotting-service/: Dockerfile  pyproject.toml
plotting-service/plotting_service/: auth.py  exceptions.py  instruments.py  model.py  plotting_api.py  utils.py
plotting-service/plotting_service/routers/: health.py  imat.py  live_data.py  plotting.py
plotting-service/plotting_service/services/: image_service.py  live_data_service.py
plotting-service/test/: test_auth.py  test_plotting_api.py  test_utils.py
plotting-service/test/test_ceph/MARI/RBNumber/RB20024/autoreduced/: MAR29531_10.5meV_sa.nxspe
plotting_service/: api.py  exceptions.py  model.py  plot_maker.py  plotting_api.py  router.py
plotting_service/routers/: imat.py  live_data.py
plotting_service/services/: image_service.py  live_data_service.py
plotting_service/strategies/: base.py  factory.py  mari.py  tosca.py
test/: test_auth.py  test_e2e.py  test_live_data.py  test_plotting_api.py  test_utils.py
