[project]
name = "plotting-service"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.110.0",
    "pydantic==2.6.2",
    "uvicorn==0.27.1",
]

[project.urls]
"Repository" = "https://github.com/fiaisis/plotting-service"

[project.optional-dependencies]
formatting = [
    "black==24.2.0"
]

test = [
    "pytest==8.0.2",
    "requests==2.31.0",
    "httpx==0.27.0",
    "pytest-cov==4.1.0",
    "pytest-random-order==1.1.1",
    "Faker==23.2.1"

]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.8.0",
    "plotting-service[test]",
    "types-requests==2.31.0.20240218",
    "types-urllib3==1.26.25.14"
]

dev = [
    "plotting-service[code-inspection]",
    "plotting-service[formatting]",
]


[tool.setuptools]
packages = ["plotting_service"]
