[project]
name = "plotting-service"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.110.2",
    "pydantic==2.7.1",
    "uvicorn==0.29.0",
]

[project.urls]
"Repository" = "https://github.com/fiaisis/plotting-service"

[project.optional-dependencies]
formatting = [
    "black==24.4.2"
]

test = [
    "pytest==8.2.0",
    "requests==2.31.0",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1",
    "Faker==25.0.0"

]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.10.0",
    "plotting-service[test]",
    "types-requests==2.31.0.20240406",
    "types-urllib3==1.26.25.14"
]

dev = [
    "plotting-service[code-inspection]",
    "plotting-service[formatting]",
]


[tool.setuptools]
packages = ["plotting_service"]
