[project]
name = "plotting-service"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.111.0",
    "pydantic==2.7.4",
    "uvicorn==0.30.1",
    "h5grove[fastapi]==2.2.0"
]

[project.urls]
"Repository" = "https://github.com/fiaisis/plotting-service"

[project.optional-dependencies]
formatting = [
    "black==24.4.2"
]

code-inspection = [
    "pylint==3.2.3",
    "mypy==1.10.0",
    "types-requests==2.32.0.20240602",
    "types-urllib3==1.26.25.14"
]

dev = [
    "plotting-service[code-inspection]",
    "plotting-service[formatting]",
]


[tool.setuptools]
packages = ["plotting_service"]
